; ModuleID = '/home/carl/AnghaBench/linux/fs/sysfs/extr_file.c_sysfs_remove_bin_file.c'
source_filename = "/home/carl/AnghaBench/linux/fs/sysfs/extr_file.c_sysfs_remove_bin_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kobject = type { i32 }
%struct.bin_attribute = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sysfs_remove_bin_file(%struct.kobject* %0, %struct.bin_attribute* %1) #0 {
  %3 = alloca %struct.kobject*, align 8
  %4 = alloca %struct.bin_attribute*, align 8
  store %struct.kobject* %0, %struct.kobject** %3, align 8
  store %struct.bin_attribute* %1, %struct.bin_attribute** %4, align 8
  %5 = load %struct.kobject*, %struct.kobject** %3, align 8
  %6 = getelementptr inbounds %struct.kobject, %struct.kobject* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.bin_attribute*, %struct.bin_attribute** %4, align 8
  %9 = getelementptr inbounds %struct.bin_attribute, %struct.bin_attribute* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @kernfs_remove_by_name(i32 %7, i32 %11)
  ret void
}

declare dso_local i32 @kernfs_remove_by_name(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
